<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Projet_Mob</string>

    <!-- Common -->
    <string name="time_left">Temps restant : %1$d s</string>
    <string name="time_end">Temps écoulé !</string>
    <string name="score_text">Score : %1$d</string>
    <string name="score_final_text">Votre score final est : %1$d</string>
    <string name="next_button">Suivant</string>

    <!-- activity 5 et 3 -->
    <string name="correct_answer">Bonne réponse</string>
    <string name="wrong_answer">Mauvaise réponse</string>
    <string name="quiz_end">Quiz terminé !</string>

    <!-- activity 3 -->
    <string name="question_text">Quel est l alcool dans %1$s ?</string>

    <!-- Layout activity 3 -->
    <string name="vodka">Vodka</string>
    <string name="rhum">Rhum</string>
    <string name="tequila">Tequila</string>
    <string name="gin">Gin</string>
    <string name="question_label">Quel est l alcool dans ce cocktail ?</string>
    <string name="cocktail">cocktail</string>

    <!-- Layout activity 6 -->
    <string name="blow_instruction">Soufflez dans l éthylotest svp</string>
    <string name="ethylo">éthylotest</string>

    <!-- Layout activity 6 -->
    <string name="bouteille">bouteille</string>

    <!-- Layout SoloGame -->
    <string name="activity1">La pluie de gouttes</string>
    <string name="activity2">Mission dévissage</string>
    <string name="activity3">Quiz coktails</string>
    <string name="activity4">Remplir sans déborder</string>
    <string name="activity5">Trouve le bar</string>
    <string name="activity6">Test d alcoolémie</string>
    <string name="training">Entrainement</string>

    <!-- Layout activity 4 -->
    <string name="fill">Remplir</string>

    <!-- Layout activity 5 -->
    <string name="question_bar">Quel est ce bar ?</string>
    <string name="option_bar">Option des bars proposé</string>

    <!-- Layout Main -->
    <string name="game_name">Alcool Challenge</string>
    <string name="solo">Jouer Seul</string>
    <string name="multi">Jouer en Multijoueur</string>

    <!-- Layout activity 1 -->
    <string name="glass">Verre</string>


    <!-- Entrainement Final score -->
    <string name="score_cumul_text">Votre score cumulé sur les 3 activites est : %1$d</string>
    <string name="back_menu">Retour au menu</string>

    <!-- Mutliplayer -->
    <string name="bluetooth_title">Menu Bluetooth</string>

</resources>
