<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:background="#F5F5DC">

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_label"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/time_left"
            android:textColor="#8B0000"
            android:layout_marginTop="16dp"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/cocktailImageView"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:contentDescription="@string/cocktail"
            android:src="@drawable/activity3_bloody_mary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/choice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vodka"
                    android:padding="10dp"
                    android:backgroundTint="#FFD700"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/choice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gin"
                    android:padding="10dp"
                    android:backgroundTint="#FFD700"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:layout_margin="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/choice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rhum"
                    android:padding="10dp"
                    android:backgroundTint="#FFD700"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/choice4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tequila"
                    android:padding="10dp"
                    android:backgroundTint="#FFD700"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:layout_margin="5dp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_text"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/feedbackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/endScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:background="#AA000000">

        <TextView
            android:id="@+id/finalScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_final_text"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:padding="16dp" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            android:padding="10dp" />
    </LinearLayout>

</FrameLayout>
