<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5DC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <com.example.projet_mob.GlassView
            android:id="@+id/glassView"
            android:layout_width="match_parent"
            android:layout_height="400dp" />

        <View
            android:id="@+id/glassFill"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/holo_blue_light" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_text"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="24dp"
            android:background="#1B5E20"
            android:text="@string/fill"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/endScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:background="#CC000000">

        <TextView
            android:id="@+id/finalScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_final_text"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:padding="16dp" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button" />
    </LinearLayout>
</FrameLayout>
