<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:background="#FFFACD">

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_bar"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_left"
            android:textSize="18sp"
            android:textColor="#8B0000"
            android:layout_marginBottom="16dp"/>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/option1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/option_bar"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/option2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/option_bar"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/option3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/option_bar"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/option4"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/option_bar"
                android:scaleType="centerCrop" />
        </GridLayout>

        <TextView
            android:id="@+id/feedbackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:textColor="#444"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_text"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/endScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:background="#AA000000">

        <TextView
            android:id="@+id/finalScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_final_text"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:padding="16dp" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            android:padding="10dp" />
    </LinearLayout>

</FrameLayout>
